--- a/members.html
+++ b/members.html
@@ -16,6 +16,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/ae.jpg" alt="Alon" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Alon Halfon</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">ahalf001 at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/al.jpg" alt="Aliya" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Aliya Lakhani</a></h4>
@@ -50,7 +60,7 @@ title: Members
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sevcan Erşan</a></h4>
 			<p class="title">Postdoctoral Researcher</p>
-			<p style="text-align:right;">sevcanersan at_gmail.com</p>
+			<p style="text-align:right;">sevcanersan at_ucla.com</p>
 			</div>
 		</div>
 	</div>
@@ -61,6 +71,15 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Lorin Danielsen</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">danielsenlorin at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/mc.jpg" alt="Lilly" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Virginia Lilly Garcia</a></h4>
+			<p class="title">Undergrad Student</p>
 			</div>
 		</div>
 	</div>
