add 'photos' page

--- a/biography.html
+++ b/biography.html
@@ -91,6 +91,7 @@ title: Biography
 		<h3>Presentations</h3>
 		<p>
 		<ul class="ul1">
+		<li>Elucidating Glycolytic Flux Control using Metabolomics and Isotope Tracers. <i>UCLA-Caltech Medical Scientist Training Program (MSTP), 2/8/2021</i></li>
 		<li>Integrating kinetics, thermodynamics, and metabolomics. <i>Korea Institute for Advanced Study (KIAS) in Seoul, South Korea, 4/30/2019</i></li>
 		<li>Integration of metabolomics and fluxomics via thermodynamics. <i>VIB Metabolomics Data Interpretation in Leuven, Belgium, 3/11/2019</i></li>
 		<li>Integrative-omics in biotechnology. <i>ISPE Biopharmaceutical Manufacturing Conference in Huntington Beach, 12/11/2018</i></li>
