add orcid; update members

--- a/biography.html
+++ b/biography.html
@@ -3,9 +3,10 @@ layout: page
 title: Biography
 ---
 	<section>
-		<h2>Junyoung O. Park</h2>
+		<h2>Junyoung O. Park <a itemprop="sameAs" content="https://orcid.org/0000-0001-9869-8993" href="https://orcid.org/0000-0001-9869-8993" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em" alt="ORCID iD icon"></a></h2>
 		
 		<p>
+		<hr />
 		<h3>Education</h3>
 		<a href="https://www.princeton.edu">Princeton University</a>, Princeton, NJ – <i>2010 - 2016</i>
 		<li>Doctor of Philosophy in <i>Chemical and Biological Engineering</i> – <i>2016</i></li>
@@ -134,6 +135,7 @@ title: Biography
 		Otto Schaler Scholarship – <i>2009</i><br>
 		Calit2 Summer Undergraduate Research Scholarship – <i>2008 - 2009</i><br>
 		</p>
+		
 	</section>
 	
 <!--		<p>
