--- a/members.html
+++ b/members.html
@@ -46,6 +46,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/so.png" alt="Samantha" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Samantha O'Keeffe</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">samokeeffe at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/kp.png" alt="Keunseok" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Keunseok Park</a></h4>
@@ -66,35 +76,6 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/ld.jpg" alt="Lorin" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Lorin Danielsen</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">danielsenlorin at_gmail.com</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/mc.jpg" alt="Lilly" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Virginia Lilly Garcia</a></h4>
-			<p class="title">Undergrad Student</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/eh.jpg" alt="Emma" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emma Hanson</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">emmahanson at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
 			<img src="/images/ppl/sl.jpg" alt="SungGyung" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sung Gyung Lee</a></h4>
@@ -105,21 +86,21 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/so.png" alt="Samantha" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Samantha O'Keeffe</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">samokeeffe at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
 			<img src="/images/ppl/ap.jpg" alt="Adriana" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Adriana Payan</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">aadrianapayann at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/dt.jpg" alt="Dylon" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Dylon Tjanaka</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">dtjanaka at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
@@ -172,6 +153,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/ld.jpg" alt="Lorin" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Lorin Danielsen</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">danielsenlorin at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/sd.jpg" alt="Sean" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sean Dickson</a></h4>
@@ -202,6 +193,15 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/mc.jpg" alt="Lilly" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Virginia Lilly Garcia</a></h4>
+			<p class="title">Undergrad Student</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/cg.jpg" alt="Cole" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Cole Gilbertson</a></h4>
@@ -217,6 +217,16 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kanika Gulia</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kgulia at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/eh.jpg" alt="Emma" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emma Hanson</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">emmahanson at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
