member photo update

--- a/members.html
+++ b/members.html
@@ -96,6 +96,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/kr.jpg" alt="Kiersten" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kiersten Russ</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">kierstenruss at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/dt.jpg" alt="Dylon" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Dylon Tjanaka</a></h4>
