--- a/photos.html
+++ b/photos.html
@@ -7,16 +7,19 @@ title: Photos
 	<div class="container">
 		<div class="row make-columns">
 			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/20210909_121609.jpg" alt="" />September 2021</a></span>
+				<span class="image fit"><a href=""><img src="images/group/20211122_152313.jpg" alt="" />Santa Monica, November 2021</a></span>
 			</div>
 			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/20201211_174701.jpg" alt="" />December 2020</a></span>
+				<span class="image fit"><a href=""><img src="images/group/20210909_121609.jpg" alt="" />UCLA, September 2021</a></span>
 			</div>
 			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/2018 holiday dinner.jpg" alt="" />December 2018</a></span>
+				<span class="image fit"><a href=""><img src="images/group/20201211_174701.jpg" alt="" />UCLA, December 2020</a></span>
 			</div>
 			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/2019 holiday dinner.jpg" alt="" />December 2019</a></span>
+				<span class="image fit"><a href=""><img src="images/group/2018 holiday dinner.jpg" alt="" />Santa Monica, December 2018</a></span>
+			</div>
+			<div class="col">
+				<span class="image fit"><a href=""><img src="images/group/2019 holiday dinner.jpg" alt="" />Century City, December 2019</a></span>
 			</div>
 		</div>
 	</div>
