--- a/members.html
+++ b/members.html
@@ -86,6 +86,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/tn.jpg" alt="Tifany" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Tifany Nguyen</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">tnguyen01 at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/ap.jpg" alt="Adriana" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Adriana Payan</a></h4>
