update bio and members

--- a/biography.html
+++ b/biography.html
@@ -70,6 +70,7 @@ title: Biography
 		<hr />
 		<h3>Teaching</h3>
 		Department of Chemical and Biomolecular Engineering, UCLA – <i>2018 - present</i>
+		<li>Systems Biology: Intracellular Network Identification and Analysis (CBE 246)</li>
 		<li>Molecular Biotechnology for Engineers (CBE/BE CM145/CM245)</li>
 		<li>Molecular Biotechnology: From Gene to Product (CBE 104D)</li>
 		<li>Thermodynamics (CBE 200 and CBE 102A)</li>
@@ -125,6 +126,7 @@ title: Biography
 		<hr />
 		<p>
 		<h3>Honors</h3>
+		NIH Maximizing Investigators' Research Award (MIRA) (R35) – <i>2021</i><br>
 		Hellman Fellowship – <i>2020</i><br>
 		UCLA Faculty Career Development Award – <i>2020</i><br>
 		Professor of the Year (AIChE at UCLA) – <i>2019</i><br>
