--- a/members.html
+++ b/members.html
@@ -16,6 +16,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/se.jpg" alt="Sevcan" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sevcan Erşan</a></h4>
+			<p class="title">Postdoctoral Researcher</p>
+			<p style="text-align:right;">sevcanersan at_ucla.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/ae.jpg" alt="Alon" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Alon Halfon</a></h4>
@@ -46,6 +56,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/gn.jpg" alt="Glenn" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Glenn Nurwono</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">nurwono at_ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/so.png" alt="Samantha" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Samantha O'Keeffe</a></h4>
@@ -66,21 +86,21 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/se.jpg" alt="Sevcan" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sevcan Erşan</a></h4>
-			<p class="title">Postdoctoral Researcher</p>
-			<p style="text-align:right;">sevcanersan at_ucla.com</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
 			<img src="/images/ppl/sl.jpg" alt="SungGyung" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sung Gyung Lee</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">sunggyung.lee123 at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/emc.jpg" alt="Elle" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Elle McCue</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">ellemccue at_g.ucla.edu</p>
 			</div>
 		</div>
 	</div>
