update front page and publications

--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@ title: Publications
 ---
 
 <ul class="ul2">
+<li>Law, R. C., Lakhani, A., O’Keeffe, S., Lakhani, A., Erşan, S., Park, J. O.  <a href="https://authors.elsevier.com/a/1ej193PtAV1NUR">Integrative metabolic flux analysis reveals an indispensable dimension of phenotypes.</a> <i>Current Opinion in Biotechnology</i> 75,102701 (2022) doi: 10.1016/j.copbio.2022.102701</li>
 <li>Polasko, A. L., Miao, Y., Kwok, I., Park, K., Park, J. O., Mahendra, S.  <a href="https://www.sciencedirect.com/science/article/pii/S2666911021000277?via%3Dihub#!">Vinyl chloride and 1,4-dioxane metabolism by <i>Pseudonocardia dioxanivorans</i> CB1190.</a> <i>Journal of Hazardous Materials Letters</i> 2,100039 (2021) doi: 10.1016/j.hazl.2021.100039</li>
 <li>Erşan, S., Park, J. O.  <a href="https://www.cell.com/joule/fulltext/S2542-4351(20)30388-3">Light-independent biological conversion of CO<sub>2</sub>.</a> <i>Joule</i> 4(10),2047-2051 (2020) doi: 10.1016/j.joule.2020.08.007</li>
 <li>Xu, J., Martien, J., Gilbertson, C., Ma, J., Amador-Noguez, D., Park, J. O.  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0958166920300355">Metabolic flux analysis and fluxomics-driven determination of Gibbs free energy using multiple isotopes.</a> <i>Current Opinion in Biotechnology</i> 64,151-160 (2020) doi: 10.1016/j.copbio.2020.02.018</li>
