--- a/index.html
+++ b/index.html
@@ -31,32 +31,50 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="/images/pic01.png" alt="" /></div><div class="content">
+							<div class="image"><img src="/images/group/20211122_152313.jpg" alt="" /></div><div class="content">
+							<a href="members">
+								<h2>Members</h2>
+								<p></p>
+							</a>
+							</div>
+							<!-- <div class="image"><img src="/images/pic01.png" alt="" /></div><div class="content">
 							<a href="integrative_metabolomics">
 								<h2>Integrating<br />
 								metabolomics & fluxomics<br />
 								via thermodynamics</h2>
 								<p></p>
 							</a>
-							</div>
+							</div> -->
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="/images/pic02.png" alt="" /></div><div class="content">
+							<div class="image"><img src="/images/research02.png" alt="" /></div><div class="content">
+							<a href="research">
+								<h2>Research</h2>
+								<p></p>
+							</a>
+							</div>
+							<!-- <div class="image"><img src="/images/pic02.png" alt="" /></div><div class="content">
 							<a href="human_diseases">
 								<h2>Understanding<br />
 								human diseases</h2>
 								<p></p>
 							</a>
-							</div>
+							</div> -->
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="/images/pic03.png" alt="" /></div><div class="content">
+							<div class="image"><img src="/images/art/joule_ncb.png" alt="" /></div><div class="content">
+							<a href="publications">
+								<h2>Publications</h2>
+								<p></p>
+							</div>
+							</a>
+							<!-- <div class="image"><img src="/images/pic03.png" alt="" /></div><div class="content">
 							<a href="co2_fixation">
 								<h2>Enhancing<br />
 								CO<sub>2</sub> utilization</h2>
 								<p></p>
 							</div>
-							</a>
+							</a> -->
 						</section>
 					</section>
 
