update members, photos, and other pages

--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,9 @@ categories: hidden
 	<p><b>Park Lab</b><br />
 	Department of Chemical and Biomolecular Engineering<br />
 	UCLA<br />
-	Boelter Hall, 7535<br />
+	Boelter Hall, 7535 and 7719<br />
 	420 Westwood Plaza<br />
 	Los Angeles, CA 90095<br /><br />
-	Office: (310) 206-1642<br />
 	Lab: (310) 206-9171<br />
 	Email: parklab@ucla.edu<br />
 	</p>
