--- a/members.html
+++ b/members.html
@@ -26,7 +26,7 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/ae.jpg" alt="Alon" style="width:100%">
+			<img src="/images/ppl/ah.jpg" alt="Alon" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Alon Halfon</a></h4>
 			<p class="title">Graduate Student</p>
@@ -76,26 +76,6 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/kp.png" alt="Keunseok" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Keunseok Park</a></h4>
-			<p class="title">Graduate Student</p>
-			<p style="text-align:right;">kencab at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/sl.jpg" alt="SungGyung" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sung Gyung Lee</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">sunggyung.lee123 at_gmail.com</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
 			<img src="/images/ppl/emc.jpg" alt="Elle" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Elle McCue</a></h4>
@@ -116,16 +96,6 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
-			<img src="/images/ppl/ap.jpg" alt="Adriana" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Adriana Payan</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">aadrianapayann at_gmail.com</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
 			<img src="/images/ppl/kr.jpg" alt="Kiersten" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kiersten Russ</a></h4>
@@ -134,33 +104,22 @@ title: Members
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/dt.jpg" alt="Dylon" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Dylon Tjanaka</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">dtjanaka at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/cw.jpg" alt="Caleb" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Caleb Watson</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">caleb.watson at_duke.edu</p>
-			</div>
-		</div>
-	</div>
 </div>
-
 
 <hr />
 
 <h3>Alumni</h3>
 <div class="row make-columns">
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/kp.png" alt="Keunseok" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Keunseok Park</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">kencab at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
 			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
@@ -272,6 +231,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/sl.jpg" alt="SungGyung" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sung Gyung Lee</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">sunggyung.lee123 at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/em.jpg" alt="Edward" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Edward Ma</a></h4>
@@ -302,6 +271,16 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/ap.jpg" alt="Adriana" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Adriana Payan</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">aadrianapayann at_gmail.com</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/jp.jpg" alt="Jacob" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jacob Prohroff</a></h4>
@@ -322,11 +301,31 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/dt.jpg" alt="Dylon" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Dylon Tjanaka</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">dtjanaka at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/hw.jpg" alt="Hans" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Hans Wahono</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">hanssw at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/cw.jpg" alt="Caleb" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Caleb Watson</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">caleb.watson at_duke.edu</p>
 			</div>
 		</div>
 	</div>
