--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,12 @@ title: Photos
 	<div class="container">
 		<div class="row make-columns">
 			<div class="col">
+				<span class="image fit"><a href=""><img src="images/group/20220610_124037.jpg" alt="" />Lab Celebration in Westwood Village, June 2022</a></span>
+			</div>
+			<div class="col">
+				<span class="image fit"><a href=""><img src="images/group/20220415_174441.jpg" alt="" />Post-lab cleanup, April 2022</a></span>
+			</div>
+			<div class="col">
 				<span class="image fit"><a href=""><img src="images/group/20211122_152313.jpg" alt="" />Santa Monica, November 2021</a></span>
 			</div>
 			<div class="col">
