--- a/biography.html
+++ b/biography.html
@@ -22,9 +22,10 @@ title: Biography
 		<a href="http://www.ucla.edu/">University of California, Los Angeles (UCLA)</a>, Los Angeles, CA – <i>2018 - present</i><br>
 		<li>Assistant Professor, Department of Chemical and Biomolecular Engineering</li>
 		<li>Co-Director, Metabolomics Center</li>
-		<li>Member, Molecular Biology Institute</li>
+		<li>SET Lead for Bioderived Materials, NSF BioPACIFIC MIP</li>
 		<li>Associated Faculty, Institute for Quantitative and Computational Biosciences</li>
-		<li>Affiliate, NSF BioPACIFIC MIP</li>
+		<li>Member, Molecular Biology Institute</li>
+		<li>Member, California NanoSystems Institute (CNSI)</li>
 		<br>
 		<a href="http://web.mit.edu">Massachusetts Institute of Technology</a>, Cambridge, MA – <i>2016 - 2018</i><br>
 		<li>Postdoc, Department of Chemical Engineering</li>
