Update bio, pubs, and photos

--- a/biography.html
+++ b/biography.html
@@ -23,6 +23,7 @@ title: Biography
 		<li>Assistant Professor, Department of Chemical and Biomolecular Engineering</li>
 		<li>Co-Director, Metabolomics Center</li>
 		<li>SET Lead for Bioderived Materials, NSF BioPACIFIC MIP</li>
+		<li>Affiliate Faculty, Department of Bioengineering</li>
 		<li>Associated Faculty, Institute for Quantitative and Computational Biosciences</li>
 		<li>Member, Molecular Biology Institute</li>
 		<li>Member, California NanoSystems Institute (CNSI)</li>
@@ -74,6 +75,7 @@ title: Biography
 		<li>Systems Biology: Intracellular Network Identification and Analysis (CBE 246)</li>
 		<li>Molecular Biotechnology for Engineers (CBE/BE CM145/CM245)</li>
 		<li>Molecular Biotechnology: From Gene to Product (CBE 104D)</li>
+		<li>Chemical Engineering Laboratory (CBE 104B)</li>
 		<li>Thermodynamics (CBE 200 and CBE 102A)</li>
 		<br>
 		Department of Chemical Engineering, MIT – <i>2017</i>
@@ -91,8 +93,39 @@ title: Biography
 		<li>Reader</li>
 		
 		<hr />
-		<h3>Presentations</h3>
 		<p>
+		<h3>Contribution to Diversity</h3>
+		<ul class="ul1">
+		<li>Mentor, Summer Undergraduate Research Program (SURP) and Samueli Research Scholars (SRS) Program – <i>2021 - present</i></li>
+		<li>Mentor, Bruin-In-Genomics (B.I.G.) Summer Undergraduate Research Program (NSF and NIH) – <i>2020 - present</i></li>
+		<li>Faculty advisor, AIChE UCLA chapter – <i>2020 - present</i></li>
+		<li>Mentor, Integrated and Interdisciplinary Undergraduate Research Program (i<sup>2</sup>URP) – <i>2020 - 2022</i></li>
+		<li>Mentor, NSF-LSAMP (NSF-CAMP) – <i>2020 - 2021</i></li>
+		<li>CityLab at UCLA – <i>2019</i></li>
+		<li>Engineering FT<sup>2</sup> (Faculty Teaching Faculty about Teaching) – <i>2018</i></li>
+		<li>National Research Mentoring Network (NRMN) Entering Mentoring Training – <i>2018</i></li>
+		<li>Mentor, NetPals STEM Program – <i>2016 - 2017</i></li>
+		</ul>
+		</p>
+		
+		<hr />
+		<p>
+		<h3>Honors</h3>
+		NIH Maximizing Investigators' Research Award (MIRA) (R35) – <i>2021</i><br>
+		Hellman Fellowship – <i>2020</i><br>
+		UCLA Faculty Career Development Award – <i>2020</i><br>
+		Professor of the Year (AIChE at UCLA) – <i>2019</i><br>
+		Schowalter Travel Fund – <i>2012 - 2015</i><br>
+		Hughes Scholars Program at UCSD – <i>2009 - 2010</i><br>
+		Warren College Honors Student – <i>2008 - 2010</i><br>
+		Provost Honors – <i>2007 - 2010</i><br>
+		Otto Schaler Scholarship – <i>2009</i><br>
+		Calit2 Summer Undergraduate Research Scholarship – <i>2008 - 2009</i><br>
+		</p>
+		
+		<hr />
+		<p>
+		<h3>Presentations</h3>
 		<ul class="ul1">
 		<li>Elucidating Glycolytic Flux Control using Metabolomics and Isotope Tracers. <i>UCLA-Caltech Medical Scientist Training Program (MSTP), 2/8/2021</i></li>
 		<li>Integrating kinetics, thermodynamics, and metabolomics. <i>Korea Institute for Advanced Study (KIAS) in Seoul, South Korea, 4/30/2019</i></li>
@@ -123,22 +156,7 @@ title: Biography
 		<li>Graduate Student Symposium <i>10/2013, 10/2012</i></li>
 		</ul>
 		</p>
-		
-		<hr />
-		<p>
-		<h3>Honors</h3>
-		NIH Maximizing Investigators' Research Award (MIRA) (R35) – <i>2021</i><br>
-		Hellman Fellowship – <i>2020</i><br>
-		UCLA Faculty Career Development Award – <i>2020</i><br>
-		Professor of the Year (AIChE at UCLA) – <i>2019</i><br>
-		Schowalter Travel Fund – <i>2012 - 2015</i><br>
-		Hughes Scholars Program at UCSD – <i>2009 - 2010</i><br>
-		Warren College Honors Student – <i>2008 - 2010</i><br>
-		Provost Honors – <i>2007 - 2010</i><br>
-		Otto Schaler Scholarship – <i>2009</i><br>
-		Calit2 Summer Undergraduate Research Scholarship – <i>2008 - 2009</i><br>
-		</p>
-		
+
 	</section>
 	
 <!--		<p>
