--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,9 @@ title: Photos
 	<div class="container">
 		<div class="row make-columns">
 			<div class="col">
+				<span class="image fit"><a href=""><img src="images/fun/labor_day_sail_2022.jpg" alt="" />Labor Day Sail 2022</a></span>
+			</div>
+			<div class="col">
 				<span class="image fit"><a href=""><img src="images/group/20220610_124037.jpg" alt="" />Lab Celebration in Westwood Village, June 2022</a></span>
 			</div>
 			<div class="col">
@@ -16,10 +19,19 @@ title: Photos
 				<span class="image fit"><a href=""><img src="images/group/20211122_152313.jpg" alt="" />Santa Monica, November 2021</a></span>
 			</div>
 			<div class="col">
+				<span class="image fit"><a href=""><img src="images/fun/october_sail_2021.jpg" alt="" />October Sail 2021</a></span>
+			</div>
+			<div class="col">
 				<span class="image fit"><a href=""><img src="images/group/20210909_121609.jpg" alt="" />UCLA, September 2021</a></span>
 			</div>
 			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/20201211_174701.jpg" alt="" />UCLA, December 2020</a></span>
+				<span class="image fit"><a href=""><img src="images/fun/september_sail_2021.jpg" alt="" />September Sail 2021</a></span>
+			</div>
+			<div class="col">
+				<span class="image fit"><a href=""><img src="images/group/20201211_174701.jpg" alt="" />UCLA "Brewin's", December 2020</a></span>
+			</div>
+			<div class="col">
+				<span class="image fit"><a href=""><img src="images/fun/january_sail_2020.jpg" alt="" />January Sail 2020</a></span>
 			</div>
 			<div class="col">
 				<span class="image fit"><a href=""><img src="images/group/2019 holiday dinner.jpg" alt="" />Century City, December 2019</a></span>
