--- a/publications.html
+++ b/publications.html
@@ -3,9 +3,12 @@ layout: page
 title: Publications
 ---
 
-<ul class="ul2">
+<ol reversed class="ul2">
+<li>Guan, X., Erşan, S., Hu, X., Atallah, T. L., Xie, Y., Lu, S., Cao, B., Sun, J., Wu, K., Huang, Y., Duan, Y., Caram, J. R., Park, J. O., Liu, C.  <a href="">Maximizing light-driven CO<sub>2</sub> and N<sub>2</sub> fixations in biology-material hybrids.</a> <i>Nature Catalysis</i> accepted (2022)</li>
+<li>Law, R. C., Nurwono, G., Park, J. O.  <a href="https://www.biorxiv.org/content/10.1101/2022.08.19.504590.abstract">A parallel glycolysis supports rapid adaptation in dynamic environments.</a> <i>bioRxiv</i> (2022) doi: 10.1101/2022.08.19.504590</li>
 <li>Law, R. C., Lakhani, A., O’Keeffe, S., Lakhani, A., Erşan, S., Park, J. O.  <a href="https://www.sciencedirect.com/science/article/pii/S0958166922000283">Integrative metabolic flux analysis reveals an indispensable dimension of phenotypes.</a> <i>Current Opinion in Biotechnology</i> 75,102701 (2022) doi: 10.1016/j.copbio.2022.102701</li>
 <li>Polasko, A. L., Miao, Y., Kwok, I., Park, K., Park, J. O., Mahendra, S.  <a href="https://www.sciencedirect.com/science/article/pii/S2666911021000277?via%3Dihub#!">Vinyl chloride and 1,4-dioxane metabolism by <i>Pseudonocardia dioxanivorans</i> CB1190.</a> <i>Journal of Hazardous Materials Letters</i> 2,100039 (2021) doi: 10.1016/j.hazl.2021.100039</li>
+<li>Chen, C., Khericha, M., Lakhani, A., Meng, X., Salvestrini, E., Chen, L. C., Shafer, A., Alag, A., Ding, Y., Nicolaou, D., Park, J. O., Chen, Y. Y.  <a href="https://www.biorxiv.org/content/10.1101/2020.10.01.322990.abstract">Rational tuning of CAR tonic signaling yields superior T-cell therapy for cancer.</a> <i>bioRxiv</i> (2020) doi: 10.1101/2020.10.01.322990</li>
 <li>Erşan, S., Park, J. O.  <a href="https://www.cell.com/joule/fulltext/S2542-4351(20)30388-3">Light-independent biological conversion of CO<sub>2</sub>.</a> <i>Joule</i> 4(10),2047-2051 (2020) doi: 10.1016/j.joule.2020.08.007</li>
 <li>Xu, J., Martien, J., Gilbertson, C., Ma, J., Amador-Noguez, D., Park, J. O.  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0958166920300355">Metabolic flux analysis and fluxomics-driven determination of Gibbs free energy using multiple isotopes.</a> <i>Current Opinion in Biotechnology</i> 64,151-160 (2020) doi: 10.1016/j.copbio.2020.02.018</li>
 <li>Park, J. O., Tanner, L. B., Wei, M. H., Khana, D. B., Jacobson, T. B., Zhang, Z., Rubin, S. A., Li, S. H. J., Higgins, M. B., Stevenson, D. M., Amador-Noguez, D., Rabinowitz, J. D.  <a href="https://doi.org/10.1038/s41589-019-0364-9">Near-equilibrium glycolysis supports metabolic homeostasis and energy yield.</a> <i>Nature Chemical Biology</i> 15(10),1001-1008 (2019) doi: 10.1038/s41589-019-0364-9</li>
@@ -26,7 +29,7 @@ title: Publications
 <li>Aristilde, L., Lewis, I. A., Park, J. O., Rabinowitz, J. D.  <a href="http://aem.asm.org/content/81/4/1452.short">Hierarchy in pentose sugar metabolism in <i>Clostridium acetobutylicum</i>.</a> <i>Applied and Environmental Microbiology</i> 81(4),1452-1462 (2015) doi: 10.1128/AEM.03199-14</li>
 <li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Rabinowitz, J. D.  <a href="https://cancerandmetabolism.biomedcentral.com/articles/10.1186/2049-3002-2-S1-P54">Comprehensive quantitation of metabolite concentrations, gross reaction fluxes, and reaction free energies across cells from four organisms.</a> <i>Cancer & Metabolism</i> 2(Suppl 1),P54 (2014) doi: 10.1186/2049-3002-2-S1-P54</li>
 <li>Schellenberger, J., Park, J. O., Conrad, T. M., Palsson, B. Ø.  <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-11-213">BiGG: A Biochemical Genetic and Genomic knowledgebase of large scale metabolic reconstructions.</a> <i>BMC Bioinformatics</i> 11,213 (2010) doi: 10.1186/1471-2105-11-213</li>
-</ul>
+</ol>
 
 <hr />
 
