--- a/biography.html
+++ b/biography.html
@@ -27,6 +27,7 @@ title: Biography
 		<li>Associated Faculty, Institute for Quantitative and Computational Biosciences</li>
 		<li>Member, Molecular Biology Institute</li>
 		<li>Member, California NanoSystems Institute (CNSI)</li>
+		<li>Member, Jonsson Comprehensive Cancer Center (JCCC)</li>
 		<br>
 		<a href="http://web.mit.edu">Massachusetts Institute of Technology</a>, Cambridge, MA – <i>2016 - 2018</i><br>
 		<li>Postdoc, Department of Chemical Engineering</li>
