--- a/members.html
+++ b/members.html
@@ -86,6 +86,26 @@ title: Members
 	</div>
 	<div class="col-xs-6 col-md-4">
 		<div class="card">
+			<img src="/images/ppl/lg.jpg" alt="Lilly" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Lilly Garcia</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">lillygarcia at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
+			<img src="/images/ppl/tl.jpg" alt="Tanya" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Tanya Lee</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">tanlee101 at_g.ucla.edu</p>
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-6 col-md-4">
+		<div class="card">
 			<img src="/images/ppl/emc.jpg" alt="Elle" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Elle McCue</a></h4>
@@ -187,15 +207,6 @@ title: Members
 			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Francisco Galang</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kixstrla1 at_g.ucla.edu</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
-		<div class="card">
-			<img src="/images/ppl/mc.jpg" alt="Lilly" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Virginia Lilly Garcia</a></h4>
-			<p class="title">Undergrad Student</p>
 			</div>
 		</div>
 	</div>
