--- a/biography.html
+++ b/biography.html
@@ -128,28 +128,29 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>From Basic Design Principles to Metabolic Engineering: Rewiring Central Carbon Metabolism for CO<sub>2</sub> Conversion. <i>Stevens Institute of Technology, 9/30/2022</i></li>
 		<li>Elucidating Glycolytic Flux Control using Metabolomics and Isotope Tracers. <i>UCLA-Caltech Medical Scientist Training Program (MSTP), 2/8/2021</i></li>
 		<li>Integrating kinetics, thermodynamics, and metabolomics. <i>Korea Institute for Advanced Study (KIAS) in Seoul, South Korea, 4/30/2019</i></li>
 		<li>Integration of metabolomics and fluxomics via thermodynamics. <i>VIB Metabolomics Data Interpretation in Leuven, Belgium, 3/11/2019</i></li>
 		<li>Integrative-omics in biotechnology. <i>ISPE Biopharmaceutical Manufacturing Conference in Huntington Beach, 12/11/2018</i></li>
 		<li>Glycolysis balances enzyme efficiency, energy efficiency, and metabolic adaptivity. <i>UCLA Metabolism Interest Group, 12/7/2018</i></li>
 		<li>Systems-level engineering of metabolic networks. <i>UCLA QCBio Retreat at Calamigos Ranch, Malibu, 9/25/2018</i></li>
-		<li>Integration of metabolomics and fluxomics via thermodynamics. <i>Pfizer in Cambridge 2018</i></li>
-		<li>Systems-level engineering of metabolic networks. <i>UCLA 2018</i></li>
-		<li>Efficient energy utilization in carbon-fixing <i>Moorella thermoacetica</i>. <i>AIChE Annual Meeting in Minneapolis 2017</i></li>
-		<li>Park, J. O., Wei, M. H., Tanner, L. B., Amador-Noguez, D., Li, S. H., Rabinowitz, J. D.  Glycolysis balances enzyme efficiency and metabolic adaptivity. <i>Department of Energy Genomic Sciences Program Annual PI Meeting 2017</i></li>
+		<li>Integration of metabolomics and fluxomics via thermodynamics. <i>Pfizer, Cambridge, 2018</i></li>
+		<li>Systems-level engineering of metabolic networks. <i>UCLA, 2018</i></li>
+		<li>Efficient energy utilization in carbon-fixing <i>Moorella thermoacetica</i>. <i>AIChE Annual Meeting in Minneapolis, 2017</i></li>
+		<li>Park, J. O., Wei, M. H., Tanner, L. B., Amador-Noguez, D., Li, S. H., Rabinowitz, J. D.  Glycolysis balances enzyme efficiency and metabolic adaptivity. <i>Department of Energy Genomic Sciences Program Annual PI Meeting ,2017</i></li>
 		<li>Dash, S., Khodayari, A., Zhou, J., Holwerda, E. K., Olson, D. G., Park, J. O., Emerson, D., Woolston, B., Chen, P., Liao, J. C., Stephanopoulos, G., Lynd, L. R., Maranas, C. D. Ensemble cell-wide kinetic modeling of anaerobic organisms to support fuels and chemicals production. <i>Department of Energy Genomic Sciences Program Annual PI Meeting 2017</i></li>
-		<li>Towards integrative metabolomics in biotechnology and medicine. <i>Y-IBS symposium at Harvard 2016</i></li>
+		<li>Towards integrative metabolomics in biotechnology and medicine. <i>Y-IBS symposium at Harvard, 2016</i></li>
 		<li>Park, J. O., Amador-Noguez, D., Wei, M. H., Rabinowitz, J. D.  Limited forward thermodynamic driving force in glycolysis of slow-growing bacteria. <i>Department of Energy Genomic Science Contractor-Grantee Meeting XIV 2016</i></li>
-		<li>Metabolite concentrations and ΔG that favor efficient enzyme usage are a conserved feature of cellular metabolism. <i>MIT 2015</i></li>
-		<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Rabinowitz, J. D.  Conservation of absolute cellular metabolite concentrations. <i>Department of Energy Genomic Science Contractors-Grantees Meeting XIII 2015</i></li>
-		<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Rabinowitz, J. D.  Comprehensive quantitation of metabolite concentrations, gross reaction fluxes, and reaction free energies across cells from four organisms. <i>Metabolism, Diet and Disease 2014</i></li>
-		<li>Amador-Noguez, D., Park, J. O., Zhang, Z., Rubin, S. A., Xu, W., Rabinowitz, J. D.  A fully reversible, highly energy efficient glycolysis with unique cofactor utilization in C. cellulolyticum. <i>Department of Energy Genomic Science Contractor-Grantee Meeting XII 2014</i></li>
-		<li>Xu, Y. F., Doucette, C. D., Park, J. O., Roquet, N., Amador-Noguez, D., Reaves, M. L., Feng, X. J., Rabitz, H., Schwab, D. J., Wingreen, N. S., Rabinowitz, J. D.  Integration of carbon, nitrogen, and oxygen metabolism in Escherichia coli. <i>Department of Energy Genomic Science Awardee Meeting X 2012</i></li>
-		<li>Park, J. O., Xu, Y. F., Rabinowitz, J. D.  Integration of carbon, nitrogen, and oxygen metabolism in Escherichia coli. <i>International Conference and Exhibition on Metabolomics & Systems Biology 2012</i></li>
-		<li>Park, J. O., Arya G.  Facilitated Diffusion of Transcription Factors in Search of DNA Target Sites. <i>Calit2 Summer Scholars Poster Session at UCSD 2009</i></li>
-		<li>Park, J. O., Schellenberger J., Conrad, T. M., Palsson, B. Ø.  BiGG: Biochemical, Genetic and Genomic Database. <i>Calit2 Summer Scholars Poster Session at UCSD 2008</i></li>
-		<li>Metabolic Engineering Guest Lecture, <i>CBE 447 04/2015</i></li>
+		<li>Metabolite concentrations and ΔG that favor efficient enzyme usage are a conserved feature of cellular metabolism. <i>MIT, 2015</i></li>
+		<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Rabinowitz, J. D.  Conservation of absolute cellular metabolite concentrations. <i>Department of Energy Genomic Science Contractors-Grantees Meeting XIII, 2015</i></li>
+		<li>Park, J. O., Rubin, S. A., Xu, Y. F., Amador-Noguez, D., Fan, J., Rabinowitz, J. D.  Comprehensive quantitation of metabolite concentrations, gross reaction fluxes, and reaction free energies across cells from four organisms. <i>Metabolism, Diet and Disease, 2014</i></li>
+		<li>Amador-Noguez, D., Park, J. O., Zhang, Z., Rubin, S. A., Xu, W., Rabinowitz, J. D.  A fully reversible, highly energy efficient glycolysis with unique cofactor utilization in C. cellulolyticum. <i>Department of Energy Genomic Science Contractor-Grantee Meeting XII, 2014</i></li>
+		<li>Xu, Y. F., Doucette, C. D., Park, J. O., Roquet, N., Amador-Noguez, D., Reaves, M. L., Feng, X. J., Rabitz, H., Schwab, D. J., Wingreen, N. S., Rabinowitz, J. D.  Integration of carbon, nitrogen, and oxygen metabolism in Escherichia coli. <i>Department of Energy Genomic Science Awardee Meeting X, 2012</i></li>
+		<li>Park, J. O., Xu, Y. F., Rabinowitz, J. D.  Integration of carbon, nitrogen, and oxygen metabolism in Escherichia coli. <i>International Conference and Exhibition on Metabolomics & Systems Biology, 2012</i></li>
+		<li>Park, J. O., Arya G.  Facilitated Diffusion of Transcription Factors in Search of DNA Target Sites. <i>Calit2 Summer Scholars Poster Session at UCSD, 2009</i></li>
+		<li>Park, J. O., Schellenberger J., Conrad, T. M., Palsson, B. Ø.  BiGG: Biochemical, Genetic and Genomic Database. <i>Calit2 Summer Scholars Poster Session at UCSD, 2008</i></li>
+		<li>Metabolic Engineering Guest Lecture, <i>CBE 447, 04/2015</i></li>
 		<li>Princeton Chemical Biology Meeting <i>04/2015, 06/2013</i></li>
 		<li>Princeton E-ffiliates Partnership Retreat <i>02/2015</i></li>
 		<li>Princeton Prokaryotes Meeting <i>03/2016, 11/2015, 10/2014, 05/2014, 10/2013, 11/2012</i></li>
